--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,12 @@ server {
         proxy_pass http://unix:/app/server.sock;
     }
 
-    location /nginx/172.17.0.7 {
-        proxy_pass http://172.17.0.7;
+    location ~ /nginx/((?<ip>(\d+).(\d+).(\d+).(\d+)):(?<port>\d+))?(\/)?(?<bla>.*) {
+      internal;
+      proxy_http_version 1.1;
+      proxy_pass_request_headers on;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_pass http://$ip:$port/$bla$is_args$args;
     }
 }
