--- a/nginx.conf
+++ b/nginx.conf
@@ -6,12 +6,12 @@ server {
         proxy_pass http://unix:/app/server.sock;
     }
 
-    location ~ /nginx/((?<ip>(\d+).(\d+).(\d+).(\d+)):(?<port>\d+))?(\/)?(?<bla>.*) {
+    location ~ /nginx/((?<ip>(\d+).(\d+).(\d+).(\d+)):(?<port>\d+))?(?<path>.*) {
       internal;
       proxy_http_version 1.1;
       proxy_pass_request_headers on;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
-      proxy_pass http://$ip:$port/$bla$is_args$args;
+      proxy_pass http://$ip:$port$path$is_args$args;
     }
 }
